# Visualizer3D

./: .gitignore  CMakeLists.txt  DebugLogger.txt  FindVisualizer3D.cmake  README.md  Visualizer3D.h  Visualizer3DConfig.cmake  main.cpp  mainGLFW_IMGUI.cpp
cmake/: FindEigen3.cmake  FindGLAD.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindIMGUI.cmake
common/: controls.cpp
examples/: CMakeLists.txt  CustomWindow.cpp  CustomWindow.h  GocadReader.cpp  main.cpp
include/: Camera3D.h  DirUtils.h  DrawableLines.h  DrawableSpheres.h  DrawableTriangles.h  GocadReader.h  Mouse.h  Shader.h  WindowGLFW.h
shaders/: axis.vertexshader  line.vs  sphere.fs  sphere.vs  sphereVert.glsl  triangle.fragmentshader  triangle.fs  triangle.vertexshader  triangle.vs
src/: Camera3D.cpp  DirUtils.cpp  DrawableLines.cpp  DrawableSpheres.cpp  DrawableTriangles.cpp  GocadReader.cpp  Mouse.cpp  Shader.cpp  Visualizer3D.cpp  WindowGLFW.cpp
